sema/testdata/pass/typedef.c
typedef int Int32;
Int32 x;
