sema/testdata/fail/redefinition.c
int x;
typedef int x;
